# vietqr

./: .gitignore  README.md  pyproject.toml
src/vietQRlib.egg-info/: PKG-INFO  SOURCES.txt
src/vietqr.egg-info/: PKG-INFO  SOURCES.txt
src/vietqr_gen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vietqr_generator.egg-info/: PKG-INFO  SOURCES.txt
src/vietqrlib/: VietQR.py  __init__.py
tests/: vietqr_test.py
